unpackaged/main/default/objects/DuplicateRecordItem/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <description>Account Billing Address</description>
    <formula>AccountName__r.BillingStreet + IF(AccountName__r.BillingStreet = "", "", ", ") + AccountName__r.BillingCity + IF(AccountName__r.BillingCity = "", "", ", ") + TEXT(AccountName__r.BillingStateCode) + IF(AccountName__r.BillingPostalCode = "", "", " ") + AccountName__r.BillingPostalCode</formula>
    <inlineHelpText>Account Billing Address</inlineHelpText>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>