unpackaged/main/default/objects/DuplicateRecordItem/fields/Account_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_By__c</fullName>
    <description>Account Created By Username</description>
    <formula>AccountName__r.CreatedBy.LastName +  IF( AccountName__c = "", "", ", ") + AccountName__r.CreatedBy.FirstName</formula>
    <inlineHelpText>Account Created By Username</inlineHelpText>
    <label>Account Created By</label>
    <type>Text</type>
</CustomField>