unpackaged/main/default/objects/DuplicateRecordItem/fields/Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Date__c</fullName>
    <description>Account Created Date</description>
    <formula>AccountName__r.CreatedDate</formula>
    <inlineHelpText>Account Created Date</inlineHelpText>
    <label>Account Created Date</label>
    <type>Date</type>
</CustomField>