unpackaged/main/default/objects/DuplicateRecordItem/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Account Name on Duplicate Record Item</description>
    <label>AccountName</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Duplicate Record Items</relationshipLabel>
    <relationshipName>Duplicate_Record_Items</relationshipName>
    <type>Lookup</type>
</CustomField>