unpackaged/main/default/objects/DuplicateRecordItem/fields/Contact_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Company_Name__c</fullName>
    <description>Contact Account Name</description>
    <formula>ContactName__r.Account.Name</formula>
    <inlineHelpText>Contact Account Name</inlineHelpText>
    <label>Contact Account Name</label>
    <type>Text</type>
</CustomField>