unpackaged/main/default/objects/DuplicateRecordItem/fields/Contact_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Contact_Created_By__c</fullName>
    <description>Contact Created By Username</description>
    <formula>ContactName__r.CreatedBy.LastName + IF(ContactName__c = "", "", ", ") + ContactName__r.CreatedBy.FirstName</formula>
    <inlineHelpText>Contact Created By Username</inlineHelpText>
    <label>Contact Created By</label>
    <type>Text</type>
</CustomField>