unpackaged/main/default/objects/DuplicateRecordItem/fields/Contact_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Created_Date__c</fullName>
    <description>Contact Created Date</description>
    <formula>ContactName__r.CreatedDate</formula>
    <inlineHelpText>Contact Created Date</inlineHelpText>
    <label>Contact Created Date</label>
    <type>Date</type>
</CustomField>