unpackaged/main/default/objects/DuplicateRecordItem/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Contact Email</description>
    <formula>ContactName__r.Email</formula>
    <inlineHelpText>Contact Email</inlineHelpText>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>