unpackaged/main/default/objects/DuplicateRecordItem/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Contact Name on Duplicate Record Item</description>
    <label>ContactName</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Duplicate Record Items</relationshipLabel>
    <relationshipName>Duplicate_Record_Items</relationshipName>
    <type>Lookup</type>
</CustomField>