unpackaged/main/default/objects/DuplicateRecordItem/fields/Lead_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_By__c</fullName>
    <description>Lead Created By Username</description>
    <formula>LeadName__r.CreatedBy.LastName + IF(LeadName__c = "", "", ", ") + LeadName__r.CreatedBy.FirstName</formula>
    <inlineHelpText>Lead Created By Username</inlineHelpText>
    <label>Lead Created By</label>
    <type>Text</type>
</CustomField>