unpackaged/main/default/objects/DuplicateRecordItem/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <description>Lead Created Date</description>
    <formula>LeadName__r.CreatedDate</formula>
    <inlineHelpText>Lead Created Date</inlineHelpText>
    <label>Lead Created Date</label>
    <type>Date</type>
</CustomField>