unpackaged/main/default/objects/DuplicateRecordItem/fields/Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email__c</fullName>
    <description>Lead Email</description>
    <formula>LeadName__r.Email</formula>
    <inlineHelpText>Lead Email</inlineHelpText>
    <label>Lead Email</label>
    <type>Text</type>
</CustomField>