unpackaged/main/default/objects/DuplicateRecordItem/fields/LeadName__c.field-meta.xml
<CustomField>
    <fullName>LeadName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Lead Name on Duplicate Record Items</description>
    <label>LeadName</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Duplicate Record Items</relationshipLabel>
    <relationshipName>Duplicate_Record_Items</relationshipName>
    <type>Lookup</type>
</CustomField>