unpackaged/main/default/objects/DuplicateRecordItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of associated Duplicate Record Set</description>
    <formula>TEXT(DuplicateRecordSet.Status__c)</formula>
    <inlineHelpText>Status of associated Duplicate Record Set</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>